# RCP-Host

./: .clang-format  .gitignore  CMakeLists.txt  GithubRelease.sh  RCP.md  README.md
cmake/: gen_version.cmake
include/RCP_Controller/: RCP_Controller.h
include/RCP_Host/: RCP_Host.h
src/: RCP_Controller.c  RCP_Host.c
test/: RingBuffer.h  fixtures.h  test.cpp
